[metadata]
name = with_env
version = 0.3.1
author = Krisztián Fekete
author-email = fekete.krisztyan@gmail.com
home-page = https://github.com/krisztianfekete/with-env
summary = Execute command within specified ephemeral environment
keywords = python postgresql context
description-file = README.md
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Environment :: Console
    Operating System :: POSIX
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Utilities


[entry_points]
console_scripts =
    in-virtualenv = with_env.python:main
    with-newdb = with_env.newdb:main
